# enki_core

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml  CI_JS.yml  JS_CI.yml
crates/bindings/enki-js/: .gitattributes  .gitignore  Cargo.toml  README.md  client.d.ts  client.js  index.d.ts  index.js  package-lock.json  package.json  test.html
crates/bindings/enki-js-v1/: .gitignore  .npmignore  package-lock.json  package.json
crates/bindings/enki-js-v1/examples/: basic.mjs  memory-module.mjs
crates/bindings/enki-js-v1/scripts/: prepare-pkg.mjs
crates/bindings/enki-js-v1/src/: lib.rs
crates/bindings/enki-js/__test__/: index.spec.ts
crates/bindings/enki-js/examples/: basic.mjs  tool-calling.mjs
crates/bindings/enki-js/examples/basic/src/: App.js
crates/bindings/enki-js/src/: lib.rs  wasm.rs
crates/bindings/enki-py/: .gitignore  Cargo.toml  build.rs  pyproject.toml
crates/bindings/enki-py/python/enki_py/: __init__.py  agent.py  simple_agent.py
crates/bindings/enki-py/python/enki_py/enki_py/: __init__.py  enki.py  example.py
crates/bindings/enki-py/python/tests/: hello_enki_with_custom_memory.py  test_agent_wrapper.py  test_all.py  test_simple_agent.py
crates/bindings/enki-py/src/: enki.udl  lib.rs
crates/core/: Cargo.toml
crates/core/examples/: simple_agent.rs
crates/core/src/: lib.rs  macros.rs  main.rs
crates/core/src/agent/: mod.rs  workspace.rs
crates/core/src/llm/providers/: mod.rs  types.rs
crates/core/src/memory/: manager.rs  mod.rs  router.rs  tests.rs  types.rs
crates/core/src/runtime/: builder.rs
crates/core/src/tooling/: builtin_tools.rs  tool_calling.rs  types.rs
docs/: agentic_loop.md
docs/enki-doc/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/enki-doc/docs/: build-from-source.md  examples.md  installation.md  javascript.md  low-level-api.md  wasm-usage.md
docs/enki-doc/src/: index.html
docs/enki-doc/src/pages/: index.js  index.module.css
docs/enki-doc/static/home/: index.html
docs/enki-py/: docusaurus.config.js  sidebars.js
docs/enki-py/docs/: agent-wrapper.md  examples.md  faq.md  intro.md  memory-backends.md  memory-examples.md
docs/enki-py/src/css/: custom.css
example/basic-js/: README.md  package-lock.json  package.json
example/basic-js/public/wasm/: enki_js.js  enki_js_bg.js  enki_js_bg.wasm
example/basic-js/src/: App.css  App.js
examples/: simple_agent.rs
src/: lib.rs  macros.rs  main.rs
src/agent/: mod.rs  workspace.rs
src/llm/: providers.rs
src/llm/providers/: backend.rs  client.rs  config.rs  error.rs  mod.rs  tests.rs  types.rs
src/memory/: manager.rs  mod.rs  router.rs  sliding_window.rs  structured.rs  summary.rs  tests.rs  types.rs
src/runtime/: builder.rs
src/tooling/: builtin_tools.rs  mod.rs  tool_calling.rs  types.rs
