[package]
name = "core-next"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
async-trait = "0.1.89"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3.32"
tracing = "0.1.44"
llm = { version = "1.3.7", default-features = false, features = ["openai", "anthropic", "ollama", "deepseek", "xai", "phind", "google", "groq", "azure_openai", "elevenlabs", "cohere", "mistral", "openrouter"] }
