[workspace]
members = ["crates/bindings/enki-js", "crates/bindings/enki-py", "crates/core"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.3"

[workspace.dependencies]
async-trait = "0.1.89"
futures = "0.3.32"
llm = { version = "1.3.7", default-features = false, features = ["openai", "anthropic", "ollama", "deepseek", "xai", "phind", "google", "groq", "azure_openai", "elevenlabs", "cohere", "mistral", "openrouter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
