[package]
name = "core"
version.workspace = true
edition.workspace = true

[lib]
name = "core_next"

[dependencies]
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
llm.workspace = true
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.17", features = ["js"] }
tokio = { version = "1.50.0", features = ["sync"] }
