[package]
name = "enki-js"
version.workspace = true
edition.workspace = true
description = "WASM-powered JavaScript bindings for Enki"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
futures.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-trait.workspace = true
core_next = { package = "core", path = "../../core" }
js-sys = "0.3.82"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
