
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition.workspace = true
name = "enki_js"
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["tokio_rt"] }
napi-derive = "3.0.0"
core_next = { package = "core", path = "../../core" }
tokio.workspace = true

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
