[package]
name = "enki-py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "enki_py"
crate-type = ["cdylib"]

[dependencies]
uniffi = "0.31.0"

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }
